--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -8,7 +8,7 @@ Fonts are separated by a & */
   --primary-color: #396E94 ;
   --secondary-color: #BDD5EA ;
   --accent1-color: #FE5F55 ;
-  --accent2-color: white;
+  --accent2-color: #577399;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Croissant One";
