--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -5,19 +5,19 @@ Fonts are separated by a & */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94 ;
+  --primary-color: #577399 ;
   --secondary-color: #BDD5EA ;
   --accent1-color: #FE5F55 ;
-  --accent2-color: #577399;
+  --accent2-color: #F7F7FF;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Croissant One";
   --paragraph-font: Oswald, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #396E94;  /* headlines on a white background */ 
+  --headline-color-on-white: #577399;  /* headlines on a white background */ 
   --headline-color-on-color:#FE5F55 ; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
+  --paragraph-color-on-white: #577399; /* paragraph text on a white background */ 
   --paragraph-color-on-color: black; /* paragraph text on a colored background */ 
   --paragraph-background-color: #BDD5EA  ;
   --nav-link-color: #FE5F55;
