--- a/byui/styles/styles.css
+++ b/byui/styles/styles.css
@@ -1,25 +1,8 @@
-body {
-    text-align: center;
+.main-para{
+  font-size: 1.5m;
+  line-height: 1.5em;
 }
-nav {
-    background-color: steelblue;
-    padding: 10px;
+#active{
+  background-color: white;
+  color: steelblue;
 }
-a {
-    color: white;
-    margin: 40px;
-}
-h1 {
-    color: steelblue;
-  }
-  img {
-    width: 800px;
-    border: 4px solid steelblue;
-  }
-  p {
-    padding: 10px;
-  }
-  footer {
-    background-color: steelblue;
-    color: white;
-  }
