--- a/byui/styles/styles.css
+++ b/byui/styles/styles.css
@@ -1,8 +1,3 @@
-.main-para{
-  font-size: 1.5m;
-  line-height: 1.5em;
-}
-#active{
-  background-color: white;
-  color: steelblue;
-}
+img[
+  width: 80%;
+]
