--- a/byui/styles/styles.css
+++ b/byui/styles/styles.css
@@ -1,3 +1,22 @@
 img{
   width: 80%;
+  display: block;
+  margin: 0 auto;
+}
+p{
+  width: 90%
+}
+a{
+  font-size: 1.5em;
+}
+h1{
+  text-align: center;
+}
+nav, footer{
+  text-align: center;
+}
+main p{
+  width: 80%;
+  margin: 20px auto;
+  text-align: center;
 }
