--- a/byui/styles/styles.css
+++ b/byui/styles/styles.css
@@ -3,17 +3,21 @@ img{
   display: block;
   margin: 0 auto;
 }
-p{
-  width: 90%
+footer p{
+  font-size: 20px;
+  margin: 20px auto;
 }
-a{
-  font-size: 1.5em;
+a:hover{
+  background-color: white;
+  color: steelblue;
 }
 h1{
   text-align: center;
 }
 nav, footer{
-  text-align: center;
+  background-color: steelblue;
+  color: white;
+  padding: 10px;
 }
 main p{
   width: 80%;
