--- a/Challenge/styles/styles.css
+++ b/Challenge/styles/styles.css
@@ -58,12 +58,12 @@ div{
 }
 footer{
 color: black;
-font-size: 10px;
+font-size: 12px;
 margin: 30px auto;
 text-align: center;
-padding: center;
-width: 200px;
-vertical-align: middle;
+width: 300px;
+display: block;
+line-height: 5px;
 }
 
   
