--- a/byui/styles/styles.css
+++ b/byui/styles/styles.css
@@ -1,26 +1,24 @@
-img{
-  width: 80%;
-  display: block;
-  margin: 0 auto;
-}
-footer p{
-  font-size: 20px;
-  margin: 20px auto;
-}
-a:hover{
-  background-color: white;
-  color: steelblue;
-}
-h1{
-  text-align: center;
-}
-nav, footer{
+footer{
   background-color: steelblue;
   color: white;
-  padding: 10px;
 }
-main p{
-  width: 80%;
-  margin: 20px auto;
-  text-align: center;
+footer p{
+  padding: 25px;
+}
+h1{
+  margin: 50px 0;
+}
+nav{
+  background-color: steelblue;
+  padding: 25px;
+}
+a{
+  color: white;
+  padding:25px;
+}
+body{
+  margin: 0;
+}
+img{
+  border: 4px solid steelblue;
 }
