--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -3,23 +3,23 @@
     font-size: 2em;
     margin-top:10px;
 }
-.msg{
-    background-color:#86BBD8;
-    line-height: 1.5em;
-    padding: 35px;
-}
 #content{
     max-width: 1600px;
     margin: 0 auto;
 }
 nav a{
     text-align: center;
-    color: antiquewhite;
+    color: #86BBD8;
     text-decoration: none;
     padding: 20px;
     padding-top: 5px;
 }
-#hero-msg h1, #hero-msg h4{
+#hero-msg h1{
+    color: white;
+    text-align: center;
+} 
+#hero-msg h4{
+    color: white;
     text-align: center;
 }
 .button-box{
@@ -31,24 +31,30 @@ main section{
 main section img{
     box-sizing: border-box;
 }
+.home-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
 #background{
     height: 725px;
 }
 body{
-    background-color: #33658A;
+    background-color: whitesmoke;
     font-family: Georgia, 'Times New Roman', Times, serif, Arial;
     font-size: 22px;
     margin: 0;
     padding: 0;
 }
 header{
-    background-color: #F26419;
+    background-color:#2F4858;
+    display: grid;
+    grid-template-columns: 150px auto;   
 }
 nav a:hover{
-    background-color:#F6AE2D;
+    background-color:gray;
 }
 .book, .join{
-    background-color:#F26419;
+    background-color:#86BBD8;
     color: whitesmoke;
     text-decoration: none;
     padding: 15px 30px;
@@ -58,9 +64,6 @@ nav a:hover{
 .book:hover, .join:hover{
     background-color: #F6AE2D
 }
-#background{
-    background-color:#86BBD8 ;
-}
 .msg p{
     padding-bottom: 15px;
 }
@@ -69,12 +72,17 @@ footer{
     color: #86BBD8;
     padding: 25px 50px;
     margin-top: 20px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 .logo{
     width: 100px;
 }
 #logo_link{
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 .icon{
     width: 80px;
@@ -100,8 +108,105 @@ h2{
     margin: 200px 0;
 }
 .card-img{
-    border: 10px solid #F26419
+    border: 10px solid #F26419;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #2F4858;
+}
+.card-img:hover{
+    opacity: .6;
+    transform: scale(1.1);
+}
+nav{
+    display: flex;
+    justify-content: space-around;
+}
+#hero{
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -110px;
+}
+#hero-box{
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+#hero-msg{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 110px;
+}
+.card-img, .mountains {
+    width: 100%;
+}
+.rivers-card{
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card{
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card{
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+#background{
+    background-color:#86BBD8 ;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 .mountains{
     margin: 100px auto;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #2F4858;
+}
+.msg{
+    background-color: #F26419;
+    line-height: 1.5em;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #2F4858;
+}
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
