--- a/sewing/style/site-plan.css
+++ b/sewing/style/site-plan.css
@@ -6,8 +6,8 @@ Fonts are separated by a | */
 :root {
   /* change the values below to your colors from your palette */
   --primary-color: #AABA99;
-  --secondary-color: navy ;
-  --accent1-color: #cbcbfc;
+  --secondary-color: #cbcbfc ;
+  --accent1-color: navy;
   --accent2-color: #de5d83;
 
   /* change the values below to your chosen font(s) */
@@ -39,6 +39,7 @@ body {
 img {
   display: block;
   margin: 0 auto;
+  max-width: 30%;
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: var(--heading-font);
@@ -67,6 +68,7 @@ p {
   color: var(--paragraph-color-on-white);
   padding: 1em;
 }
+
 .colors {
   width: 100%;
   min-width: 350px;
