--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -35,8 +35,20 @@ main section img{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 }
+.photo-grid{
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    gap: 30px;
+    justify-items: center;
+    text-align: center;
+    background-color: #86BBD8;
+    padding: 20px 20px 20px 20px;
+}
 #background{
     height: 725px;
+}
+#background2{
+    height: 350px;
 }
 body{
     background-color: whitesmoke;
@@ -59,6 +71,7 @@ nav a:hover{
     text-decoration: none;
     padding: 15px 30px;
     margin-top: 20px;
+    border: 10px;
     border-radius: 10px;
 }
 .book:hover, .join:hover{
@@ -105,12 +118,74 @@ h2{
     margin: 0;
 }
 .rivers-card, .camping-card, .rapids-card{
-    margin: 200px 0;
+    margin: 200px 0; 
 }
+
 .card-img{
     border: 10px solid #F26419;
     transition: transform .5s;
     box-shadow: 5px 5px 10px #2F4858;
+}
+.photo-img{
+    width: 100%;
+    height: 100%;
+    padding-top: 20px;
+}
+.riv1{
+    grid-column: 1/4;
+    grid-row: 1/2;
+}
+.riv2{
+    grid-column: 1/4;
+    grid-row:2/3;
+}
+.camp1{
+    grid-column: 4/7;
+    grid-row: 1/2;
+}
+.camp2{
+    grid-column: 4/7;
+grid-row: 2/3;
+}
+.nat1{
+    grid-column:7/10;
+    grid-row: 1/2;
+    width: 100%;
+}
+.nat2{
+    grid-column: 7/10;
+    grid-row: 2/3;
+}
+.dronemain{
+    display: inline-block;
+    height: 500px;
+    background-color: #F26419;
+    z-index: 2;
+    padding-top: 50px;
+}
+.dronepic{
+    width: 550px;
+    float:left;
+    z-index: 0;
+}
+.dronemoney{
+    display: block;
+    background-color:#F26419;
+    z-index: 1;
+    height:300px;
+}
+.dronemoney p, a{
+    line-height: 2em;
+    padding: 20px;
+    text-align: middle;
+}
+.contactus{
+    background-color:#86BBD8;
+    color: whitesmoke;
+    text-decoration: none;
+    padding: 15px 20px;
+    border: 10px;
+    border-radius: 10px;
 }
 .card-img:hover{
     opacity: .6;
@@ -154,7 +229,7 @@ nav{
     grid-row: 2/3;
 }
 #background{
-    background-color:#86BBD8 ;
+    background-color:#86BBD8;
     grid-column: 1/11;
     grid-row: 4/9;
 }
@@ -214,5 +289,36 @@ nav{
     }
     footer {
         margin-top: 25px;
+    }
+}
+@media screen and (max-width: 900px) {
+    .photo-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .dronemain{
+        display: block;
+        width: 100%;
+        margin: 0 auto;
+    }
+    .dronepic{
+        width: 50%;
+    }
+    .dronemain p{
+        line-height: 1em;
+    }
+    footer {
+        margin-top: 0px;
     }
 }
