--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -130,13 +130,13 @@ h2{
 .photo-img{
     width: 100%;
     height: 100%;
-    padding-top: 20px;
+    padding: 20px 0px;
 }
 .riv1{
     grid-column: 1/4;
     grid-row: 1/2;
 }
-.riv2{
+#riv2{
     grid-column: 1/4;
     grid-row:2/3;
 }
@@ -144,7 +144,7 @@ h2{
     grid-column: 4/7;
     grid-row: 1/2;
 }
-.camp2{
+#camp2{
     grid-column: 4/7;
 grid-row: 2/3;
 }
@@ -153,7 +153,7 @@ grid-row: 2/3;
     grid-row: 1/2;
     width: 100%;
 }
-.nat2{
+#nat2{
     grid-column: 7/10;
     grid-row: 2/3;
 }
