--- a/sewing/style/styles.css
+++ b/sewing/style/styles.css
@@ -7,23 +7,11 @@
     max-width: 1600px;
     margin: 0 auto;
 }
-.home-grid{
-
-}
 nav a{
     text-align: center;
     color: navy;
     text-decoration: none;
-    padding: 20px;
-    padding-top: 40px;
-}
-#hero-msg h1{
-    color: white;
-    text-align: center;
-} 
-#hero-msg h4{
-    color: white;
-    text-align: center;
+    padding-top: 70px;
 }
 .button-box{
     text-align: center;
@@ -34,11 +22,6 @@ main section{
 main section img{
     box-sizing: border-box;
 }
-
-#background{
-    height: 725px;
-}
-
 body{
     background-color: whitesmoke;
     font-family: Georgia, 'Times New Roman', Times, serif, Arial;
@@ -50,6 +33,8 @@ header{
     background-color:#de5d83;
     display: grid;
     grid-template-columns: 150px auto;   
+    height: 200px;
+    font-size: 35px;
 }
 nav a:hover{
     background-color: #cbcbfc ;
@@ -61,27 +46,27 @@ nav a:hover{
     padding: 15px 30px;
     margin-top: 20px;
     border-radius: 10px;
+    display: inline-block;
+    font-size: 30px;
 }
+
 .book:hover, .join:hover{
     background-color:  #cbcbfc;
-}
-.msg p{
-    padding-bottom: 15px;
 }
 footer{
     background-color:#de5d83 ;
     color: navy;
     padding: 25px 50px;
-    margin-top: 20px;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
 .logo{
-    width: 100px;
+    width: 150px;
 }
 #logo_link{
     padding-top: 5px;
+    padding-left: 30px;
     justify-self: center;
     align-self: center;
 }
@@ -107,6 +92,8 @@ footer .social img{
 }
 h2{
     margin: 0;
+    color: black;
+    text-align: center;
 }
 .rivers-card, .camping-card, .rapids-card{
     margin: 200px 0;
@@ -124,27 +111,6 @@ nav{
     display: flex;
     justify-content: space-around;
 }
-#hero{
-    display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
-    margin-top: -110px;
-}
-#hero-box{
-    grid-column: 1/4;
-    grid-row: 1/3;
-    z-index: -1;
-}
-#hero-img{
-    width: 100%;
-}
-#hero-msg{
-    grid-column: 2/3;
-    grid-row: 1/2;
-    margin-top: 100px;
-}
-.card-img, .mountains {
-    width: 100%;
-}
 .rivers-card{
     grid-column: 2/4;
     grid-row: 2/3;
@@ -159,30 +125,36 @@ nav{
 }
 #background{
     background-color:#86BBD8 ;
-    grid-column: 1/11;
-    grid-row: 4/9;
 }
 .mountains{
     margin: 100px auto;
-    grid-column: 2/7;
-    grid-row: 1/4;
     box-shadow: 5px 5px 10px grey;
-    max-width: 30%;
+    max-width: 25%;
+    margin: 20px;
+    float: left;
 }
 .mountains2{
     margin: 100px auto;
-    grid-column: 2/7;
-    grid-row: 5/8;
     box-shadow: 5px 5px 10px grey;
-    max-width: 30%;
+    max-width: 40%;
+    margin: 20px;
 }
 .msg{
     background-color: #AABA99;
-    line-height: 1.5em;
-    padding: 35px;
-    grid-column: 6/10;
-    grid-row: 6/7;
+    line-height: 2.5em;
+    padding: 50px;
     box-shadow: 5px 5px 5px grey;
+    height: 600px;
+    display: inline-block;
+    text-align: center;
+}
+.msg1{
+    background-color:#cbcbfc;
+    line-height: 2.5em;
+    padding: 35px;
+    box-shadow: 5px 5px 5px grey;
+    height: 300px;
+    text-align: center;
 }
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
@@ -227,4 +199,43 @@ nav{
     footer {
         margin-top: 25px;
     }
+}
+.clothing-grid{
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    gap: 30px;
+    justify-items: center;
+    text-align: center;
+    background-color: #86BBD8;
+    padding: 20px 20px 20px 20px;
+}
+.photo-img{
+    width: 100%;
+    height: 100%;
+    padding: 20px 0px;
+}
+.riv1{
+    grid-column: 1/4;
+    grid-row: 1/2;
+}
+#riv2{
+    grid-column: 1/4;
+    grid-row:2/3;
+}
+.camp1{
+    grid-column: 4/7;
+    grid-row: 1/2;
+}
+#camp2{
+    grid-column: 4/7;
+grid-row: 2/3;
+}
+.nat1{
+    grid-column:7/10;
+    grid-row: 1/2;
+    width: 100%;
+}
+#nat2{
+    grid-column: 7/10;
+    grid-row: 2/3;
 }
