--- a/sewing/styles/styles.css
+++ b/sewing/styles/styles.css
@@ -206,9 +206,6 @@ nav{
         display: block;
         margin: 0 auto;
     }
-    footer {
-        margin-top: 25px;
-    }
     .photo-img{
         height: 80%;
     }
@@ -216,9 +213,24 @@ nav{
 height: 100%;
 width: 100%;
     }
+    .pclothing-grid2{
+        height: 100%;
+        width: 100%;
+            }
     .pclothing-grid img{
         width: 100%;
         height: 55%;
+    }
+    .pclothing-grid2 img{
+        width: 100%;
+        height: 50%;
+    }
+    .Adjustments{
+        height: 250px;
+        width: 100%;
+    }
+    .Adjustments img{
+        height: 40%;
     }
 }
 .clothing-grid{
@@ -238,6 +250,29 @@ width: 100%;
     text-align: center;
     background-color: #86BBD8;
     padding: 15px;
+}
+.pclothing-grid2{
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    gap: 5px;
+    justify-items: center;
+    text-align: center;
+    background-color: #de5d83;
+    padding: 15px;
+    height: 80%;
+}
+.Adjustments{
+    background-color: #cbcbfc;
+    height: 400px;
+    padding: 20px;
+}
+.Adjustments img{
+ width: 400px;
+ float: left;
+}
+.home-grid{
+    height: 100%;
+    Width: auto;
 }
 .photo-img{
     width: 100%;
