--- a/sewing/styles/site-plan.css
+++ b/sewing/styles/site-plan.css
@@ -1,7 +1,7 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
-@import url('https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|Lato');
+@import url('https://fonts.googleapis.com/css2?family=Agbalumo&family=Playpen+Sans:wght@500;600&family=Roboto+Slab&family=Rubik&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
@@ -12,7 +12,7 @@ Fonts are separated by a | */
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Agbalumo";
-  --paragraph-font: "Playpen Sans", "Noto Sans", "Nunito";
+  --paragraph-font: "Playpen Sans";
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: navy;  /* headlines on a white background */ 
