--- a/sewing/styles/styles.css
+++ b/sewing/styles/styles.css
@@ -174,6 +174,10 @@ nav{
 .title-products{
     font-family: 'Rubik';
 }
+.time-frame{
+    padding: 0px 10px;
+    text-align: center;
+}
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
         display: block;
